--- a/revision_app/templates/htmls/crear_gato.html
+++ b/revision_app/templates/htmls/crear_gato.html
@@ -5,7 +5,7 @@
 {% endblock title_head %}
 
 {% block h1_header %}
-<h1>Estamos creadno un gato</h1>
+<h1>Estamos creando un gato</h1>
 {% endblock h1_header %}
 
 {% block contenido %}
